tests/lexer/fail/bad_escape1.c
int main(void) {
	char* txt = "Bad escape \z";
}
